fix menu stickiness for mobile; disable invisible links

--- a/index.css
+++ b/index.css
@@ -59,7 +59,6 @@ h1, h2 {
     padding-right: 18px;
     padding-top: 12px;
     cursor: pointer;
-    /* TODO: Make sticky??? */
     position: fixed;
     top: 0;
     left: 0;
@@ -75,18 +74,20 @@ h1, h2 {
   }
 
   .menu-options {
-    position: absolute;
+    position: fixed;
+    overflow: hidden;
+    top: 49px;
     background-color: lightcyan;
     width: 0;
     height: 100vh;
     color: rgba(0, 0, 0, 0);
-    transition: width 0.8s, color 0.4s ease-in-out;
+    transition: width 0.6s, color 0.4s ease-in-out;
   }
 
   .menu-options.open {
     width: 100%;
     color:black;
-    transition: width 0.8s, color 1.4s ease-in-out;
+    transition: width 0.6s, color 1.4s ease-in-out;
   }
 
   .nav-item {
